添加授课计划中的授课方式

--- a/controllers/certificates/config_filter.yaml
+++ b/controllers/certificates/config_filter.yaml
@@ -5,7 +5,7 @@ scopes:
   active:
     label: 有效
     type: switch
-    default: true
+    default: 2
     conditions:
       - active <> true
       - active = true
