--- a/models/teacher/columns.yaml
+++ b/models/teacher/columns.yaml
@@ -5,6 +5,11 @@ columns:
         searchable: true
         invisible: true
         sortable: true
+    image:
+        label: 照片
+        type: partial
+        path: ~/plugins/samubra/training/controllers/baseview/list/_imageResize.htm
+        sortable: false
     name:
         label: 姓名
         type: text
