通过显示控制器来控制显示查看、修改、打印按钮

--- a/models/plancourse/columns.yaml
+++ b/models/plancourse/columns.yaml
@@ -16,13 +16,8 @@ columns:
         relation: plan
     hours:
         label: 课时
-        type: loveit
+        type: number
     teaching_form:
         label: 授课方式
         type: partial
         path: $/samubra/training/controllers/plancourses/_teaching_form.htm
-    action:
-        label: 操作
-        type: partial
-        sortable: false
-        path: $/samubra/training/controllers/baseview/list/_action.htm
