调整类别页面的过滤条件

--- a/controllers/categories/config_filter.yaml
+++ b/controllers/categories/config_filter.yaml
@@ -5,7 +5,7 @@ scopes:
     active:
         label: 已启用
         type: switch
-        default: true
+        default: 2
         conditions:
           - active <> true
           - active = true
