--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -49,11 +49,14 @@
     - 'Updated table samubra_training_plan_courses'
     - builder_table_update_samubra_training_plan_courses.php
 1.0.20:
-    - '填充培训类别'
+    - 填充培训类别
     - category_seeder.php
 1.0.21:
-    - '填充发证机构'
+    - 填充发证机构
     - organizations_seeder.php
 1.0.22:
-    - '填充状态列表'
+    - 填充状态列表
     - status_seeder.php
+1.0.23:
+    - 'Updated table samubra_training_organizations'
+    - builder_table_update_samubra_training_organizations.php
