通过blog页面发布培训项目,未完成blog前台显示

--- a/controllers/projects/config_relation.yaml
+++ b/controllers/projects/config_relation.yaml
@@ -7,3 +7,11 @@ status_change:
     form: $/samubra/training/models/status/fields.yaml
     recordsPerPage: 10
     scope: project
+posts:
+  label: 文章
+  view:
+    list: $/rainlab/blog/models/post/columns.yaml
+    toolbarButtons: add|remove
+  manage:
+    recordsPerPage: 10
+    scope: isPublished
