--- a/models/project/fields.yaml
+++ b/models/project/fields.yaml
@@ -99,3 +99,7 @@ tabs:
             type: partial
             path: status
             tab: 培训状态
+        posts:
+            type: partial
+            path: posts
+            tab: 发布文章
