proje_courses添加course_id字段，添加List Switch支持

--- a/models/category/columns.yaml
+++ b/models/category/columns.yaml
@@ -42,10 +42,14 @@ columns:
         invisible: true
         sortable: true
     active:
-        label: 是否启用
-        type: switch
-        searchable: true
+        label: 启用
+        type: inetis-list-switch
+        icon: true
         sortable: true
+        titleTrue: '禁用该培训类别'
+        titleFalse: '启用该培训类别'
+        textTrue: '启用'
+        textFalse: '禁用'
     description:
         label: 分类描述
         type: text
