--- a/controllers/projects/config_form.yaml
+++ b/controllers/projects/config_form.yaml
@@ -11,7 +11,7 @@ update:
     redirect: 'samubra/training/projects/update/:id'
     redirectClose: samubra/training/projects
     title: 修改培训项目信息
-    flashSave: 创建培训项目修改成功！
+    flashSave: 培训项目修改成功！
     flashDelete: 培训项目已成功删除！
 preview:
     title: 查看培训项目详情
