调整培训申请去除重复的功能

--- a/models/plan/columns.yaml
+++ b/models/plan/columns.yaml
@@ -50,6 +50,7 @@ columns:
     document:
         label: 文档需求
         type: partial
+        invisible: true
         path: $/samubra/training/controllers/plans/list/_document.htm
     updated_at:
         label: 最后修改
