--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "maatwebsite/excel": "~2.1.0",
         "intervention/image": "^2.4",
         "jxlwqq/id-validator": "^1.4",
-        "propaganistas/laravel-phone": "^4.1"
+        "propaganistas/laravel-phone": "^4.1",
+        "gloudemans/shoppingcart": "^2.6"
     },
     "autoload": {
         "psr-4": {
