--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "intervention/image": "^2.4",
         "jxlwqq/id-validator": "^1.4",
         "propaganistas/laravel-phone": "^4.1",
-        "gloudemans/shoppingcart": "^2.6"
+        "overtrue/laravel-shopping-cart": "~2.0"
     },
     "autoload": {
         "psr-4": {
