将前台的表单移动到组件内，调整页面布局和显示逻辑

--- a/controllers/orders/config_form.yaml
+++ b/controllers/orders/config_form.yaml
@@ -2,7 +2,7 @@
 #  Form Behavior Config
 # ===================================
 
-# Record name
+# RecordForm name
 name: ''
 
 # Model Form Field configuration
