--- a/controllers/shipping/config_form.yaml
+++ b/controllers/shipping/config_form.yaml
@@ -2,7 +2,7 @@
 #  Form Behavior Config
 # ===================================
 
-# Record name
+# RecordForm name
 name: samubra.training::lang.shipping.create_method
 
 # Model Form Field configuration
