--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -99,3 +99,6 @@
 2018.8.4:
     - 'Added payment methods to order2.'
     - payment_methods_seed.php
+2018.8.5:
+    - 'Updated table samubra_training_orders 添加address字段'
+    - builder_table_update_samubra_training_orders.php
