--- a/models/order/fields.yaml
+++ b/models/order/fields.yaml
@@ -5,96 +5,96 @@
 fields:
     id:
         type: partial
-        path: ~/plugins/xeor/octocart/models/order/_id_field.htm
+        path: ~/plugins/samubra/training/models/order/_id_field.htm
 
 tabs:
     fields:
 
         created_at:
-            tab: xeor.octocart::lang.order.general_details
-            label: xeor.octocart::lang.order.created_at
+            tab: samubra.training::lang.order.general_details
+            label: samubra.training::lang.order.created_at
             type: datepicker
             span: left
 
         date_completed:
-            tab: xeor.octocart::lang.order.general_details
-            label: xeor.octocart::lang.order.date_completed
+            tab: samubra.training::lang.order.general_details
+            label: samubra.training::lang.order.date_completed
             span: left
             type: datepicker
 
         status:
-            tab: xeor.octocart::lang.order.general_details
-            label: xeor.octocart::lang.order.status
+            tab: samubra.training::lang.order.general_details
+            label: samubra.training::lang.order.status
             span: left
             type: dropdown
 
 #        customer:
-#            tab: xeor.octocart::lang.order.general_section
-#            label: xeor.octocart::lang.order.customer
+#            tab: samubra.training::lang.order.general_section
+#            label: samubra.training::lang.order.customer
 
         note:
-            tab: xeor.octocart::lang.order.general_details
-            label: xeor.octocart::lang.order.note
+            tab: samubra.training::lang.order.general_details
+            label: samubra.training::lang.order.note
             span: left
             type: textarea
 
         billing_info:
-            tab: xeor.octocart::lang.order.billing_details
+            tab: samubra.training::lang.order.billing_details
             type: datatable
             columns:
                 name:
-                    title: xeor.octocart::lang.order.billing_details_name
+                    title: samubra.training::lang.order.billing_details_name
                 value:
-                    title: xeor.octocart::lang.order.billing_details_value
+                    title: samubra.training::lang.order.billing_details_value
 
         payment_method:
-            label: xeor.octocart::lang.order.payment_method
+            label: samubra.training::lang.order.payment_method
             span: left
             nameFrom: name
             descriptionFrom: description
             type: relation
-            tab: xeor.octocart::lang.order.billing_details
+            tab: samubra.training::lang.order.billing_details
 
         date_paid:
-            tab: xeor.octocart::lang.order.billing_details
-            label: xeor.octocart::lang.order.date_paid
+            tab: samubra.training::lang.order.billing_details
+            label: samubra.training::lang.order.date_paid
             span: left
             type: datepicker
 
         email:
-            tab: xeor.octocart::lang.order.billing_details
-            label: xeor.octocart::lang.order.email
+            tab: samubra.training::lang.order.billing_details
+            label: samubra.training::lang.order.email
             span: left
 
         phone:
-            tab: xeor.octocart::lang.order.billing_details
-            label: xeor.octocart::lang.order.phone
+            tab: samubra.training::lang.order.billing_details
+            label: samubra.training::lang.order.phone
             span: left
 
         shipping_info:
-            tab: xeor.octocart::lang.order.shipping_details
+            tab: samubra.training::lang.order.shipping_details
             type: datatable
             columns:
                 name:
-                    title: xeor.octocart::lang.order.shipping_info_name
+                    title: samubra.training::lang.order.shipping_info_name
                 value:
-                    title: xeor.octocart::lang.order.shipping_info_value
+                    title: samubra.training::lang.order.shipping_info_value
 
         shipping_method:
-            label: xeor.octocart::lang.order.shipping_method
+            label: samubra.training::lang.order.shipping_method
             span: left
             nameFrom: name
             descriptionFrom: description
             type: relation
-            tab: xeor.octocart::lang.order.shipping_details
+            tab: samubra.training::lang.order.shipping_details
 
         shipping_total:
-            label: xeor.octocart::lang.order.shipping_total
+            label: samubra.training::lang.order.shipping_total
             span: left
             type: number
-            tab: xeor.octocart::lang.order.shipping_details
+            tab: samubra.training::lang.order.shipping_details
 
-        items:
-            tab: xeor.octocart::lang.order.items
+        cart_items:
+            tab: samubra.training::lang.order.items
             type: partial
-            path: ~/plugins/xeor/octocart/models/order/_items_field.htm
+            path: ~/plugins/samubra/training/models/order/_items_field.htm
