调整后台菜单显示

--- a/plugin.yaml
+++ b/plugin.yaml
@@ -48,7 +48,7 @@ navigation:
                 url: samubra/training/plancourses
                 icon: icon-tree
     projects:
-        label: 培训项目
+        label: 培训管理
         url: samubra/training/projects
         icon: icon-database
         sideMenu:
