--- a/models/paymentmethod/columns.yaml
+++ b/models/paymentmethod/columns.yaml
@@ -1,16 +1,16 @@
 columns:
     name:
-        label: 'xeor.octocart::lang.payment_method.name'
+        label: 'samubra.training::lang.payment_method.name'
         searchable: true
         sortable: true
     active:
-        label: 'xeor.octocart::lang.payment_method.active'
+        label: 'samubra.training::lang.payment_method.active'
         type: switch
         searchable: false
         sortable: true
         width: 100px
     weight:
-        label: xeor.octocart::lang.payment_method.weight
+        label: samubra.training::lang.payment_method.weight
         type: number
         searchable: false
         sortable: true
