--- a/models/shippingmethod/columns.yaml
+++ b/models/shippingmethod/columns.yaml
@@ -1,16 +1,16 @@
 columns:
     name:
-        label: xeor.octocart::lang.shipping_method.name
+        label: samubra.training::lang.shipping_method.name
         searchable: true
         sortable: true
     active:
-        label: xeor.octocart::lang.shipping_method.active
+        label: samubra.training::lang.shipping_method.active
         type: switch
         searchable: false
         sortable: true
         width: 100px
     weight:
-        label: xeor.octocart::lang.shipping_method.weight
+        label: samubra.training::lang.shipping_method.weight
         type: number
         searchable: false
         sortable: true
