--- a/models/paymentmethod/columns.yaml
+++ b/models/paymentmethod/columns.yaml
@@ -1,10 +1,10 @@
 columns:
     name:
-        label: 'samubra.training::lang.payment_method.name'
+        label: samubra.training::lang.payment_method.name
         searchable: true
         sortable: true
     active:
-        label: 'samubra.training::lang.payment_method.active'
+        label: samubra.training::lang.payment_method.active
         type: switch
         searchable: false
         sortable: true
